syntax = "proto3";
package douyin;
option go_package = "douyin";

message LoginRequest {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message LoginResponse {
  uint32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  optional uint32 user_id = 3; // 用户id
  optional string token = 4; // 用户鉴权token
}

service LoginService {
  rpc Login (LoginRequest) returns (LoginResponse) {
  }
}

message RegisterRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message RegisterResponse {
  uint32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  uint32 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

service RegisterService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {
  }
}